<resources>
    <string name="app_name">Calendar Notes</string>
    <string name="action_settings">Settings</string>
    <string name="task_name_string">Название задачи</string>
    <string name="task_description_string">Описание задачи</string>
    <string name="new_task_string">Новая задача</string>
    <string name="set_date_and_time">Задать дату и время:</string>
    <string name="save_new_task_btn">Сохранить задачу</string>
    <string name="task_saved_toast">Задача сохранена</string>
    <string name="descr">Подробное описание</string>
    <string name="date_and_time">Дата и время:</string>
    <string name="name_of_task">Название задачи:</string>
    <string name="description_of_task">Описание задачи:</string>
</resources>
