<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.DescriptionActivity">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textStyle="bold"
            android:text="@string/name_of_task"/>

        <TextView
            android:id="@+id/task_name_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:hint="@string/task_name_string"/>

        <TextView
            android:id="@+id/date_description_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_name_descr"
            android:layout_margin="@dimen/default_margin_16dp"
            android:textStyle="bold"
            android:text="@string/date_and_time"/>

        <TextView
            android:id="@+id/task_date_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_description_desc"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_margin_16dp" />

        <TextView
            android:id="@+id/task_time_start_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/task_time_finish_desc"
            app:layout_constraintTop_toBottomOf="@id/task_date_desc"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_margin_16dp" />

        <TextView
            android:id="@+id/task_time_finish_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/task_time_start_desc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_date_desc"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_margin_16dp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/task_time_start_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:text="@string/description_of_task"/>

        <TextView
            android:id="@+id/task_description_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>