<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NewTaskActivity">


    <EditText
        android:id="@+id/new_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/task_name_string"/>

    <TextView
        android:id="@+id/date_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_name"
        android:layout_margin="@dimen/default_margin_16dp"
        android:textAlignment="center"
        android:text="@string/set_date_and_time"/>

    <TextView
        android:id="@+id/new_task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_description"
        android:onClick="onDateClick"
        android:textAlignment="center"
        android:padding="@dimen/text_padding_16dp"
        android:layout_margin="@dimen/default_margin_16dp"
        android:background="@drawable/tasks_list_item_background"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/new_task_time_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/new_task_time_finish"
        app:layout_constraintTop_toBottomOf="@id/new_task_date"
        android:onClick="onTimeStartClick"
        android:textAlignment="center"
        android:padding="@dimen/text_padding_16dp"
        android:layout_margin="@dimen/default_margin_16dp"
        android:background="@drawable/tasks_list_item_background"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/new_task_time_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/new_task_time_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_date"
        android:onClick="onTimeFinishClick"
        android:textAlignment="center"
        android:padding="@dimen/text_padding_16dp"
        android:layout_margin="@dimen/default_margin_16dp"
        android:background="@drawable/tasks_list_item_background"
        android:elevation="2dp"/>


    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_task_time_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textMultiLine"
        android:hint="@string/task_description_string"/>

</androidx.constraintlayout.widget.ConstraintLayout>